# newsletter

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20240410230554_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
